[package]
name = "downpour"
version = "0.1.0"
description = "A toy BitTorrent client written in Rust"
repository = "https://github.com/ConorBobbleHat/downpour"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
binread = "2.2.0"
binwrite = "0.2.1"
boolvec = "0.2.6"
clap = { version = "3.2.12", features = ["derive"] }
futures = "0.3.21"
nom = "7.1.1"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking"] }
sha1 = "0.10.1"
tokio = { version = "1.19.2", features = ["full"] }
urlencoding = "2.1.0"
